# Copyright (c) soynexz. All rights reserved.
# Check the README file in the project root for more information.

[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
rustblock_util = { path = "../util" }

[[bin]]
name = "engine"
path = "main.rs"
